--- a/templates/expenses.html
+++ b/templates/expenses.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 
+<body>
 <h2>Lista wydatków</h2>
 
 <table>
@@ -57,7 +58,7 @@
             </tr>
             {% endfor %}
         </table>
-        <input type="submit" value="Go">
+        <input type="submit" value="Dodaj">
     </form>
 </div>
 </body>
